Closed Bug 1483542 Opened 6 years ago Closed 6 years ago

Performance regression in Octane/Box2D due to porting Compare IC to CacheIR

Categories

(Core :: JavaScript Engine: JIT, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla63
Tracking Status
firefox63 --- fixed

People

(Reporter: mgaudet, Assigned: mgaudet)

References

Details

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1483189 +++ In Bug 1341261, the most recent CacheIR patches lead to a large (45% performance regression). This is visible on https://arewefastyet.com/#machine=29&view=single&suite=octane&subtest=Box2D. Bug 1483189 fixed one regression, however the fixes there appear not to resolve the Box2D regression.
No longer blocks: ares-6
Bisect points at Matthews-MacBook-Pro:build_pt7_OPT.OBJ mgaudet$ hg bisect -g The first bad revision is: changeset: 481101:87fabc832341 user: Matthew Gaudet <mgaudet@mozilla.com> date: Fri Jun 08 16:46:23 2018 -0400 summary: Bug 1341261: [Part 6] Teach the Baseline Inspector about the new CacheIR ops r=tcampbell Hilariously, I get all the perf back with this: diff --git a/js/src/jit/BaselineInspector.cpp b/js/src/jit/BaselineInspector.cpp --- a/js/src/jit/BaselineInspector.cpp +++ b/js/src/jit/BaselineInspector.cpp @@ -567,16 +567,17 @@ CompatibleType(MCompare::CompareType fir return second; return first; } MCompare::CompareType BaselineInspector::expectedCompareType(jsbytecode* pc) { + return MCompare::Compare_Unknown; ICStub* first = monomorphicStub(pc); Will try to investigate more while flying.
Assignee: nobody → mgaudet
Status: NEW → ASSIGNED
Attachment #9001421 - Flags: review?(tcampbell) → review+
Pushed by mgaudet@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/cbfd7962458a Correct the expected compare type computation for CacheIR stubs in some cases r=tcampbell
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: