Bug 1483542 - Correct the expected compare type computation for CacheIR stubs in some cases r=tcampbell

--HG--
extra : rebase_source : 915e290b73a818e0bb2f8b81d814e81f272e4103
extra : amend_source : e63d0980b316fae4233e6f152310322e18e1f283